--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.2",
     "i18next": "^24.2.2",
     "lucide-react": "^0.477.0",
     "react-i18next": "^15.4.1",
