--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@tailwindcss/postcss": "^4.0.9",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "cypress": "^13.0.0",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.7.2",
@@ -33,9 +43,9 @@
     "i18next": "^24.2.2",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
+    "react": "^18.0.0",
     "react-day-picker": "^8.8.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.0.0",
     "react-i18next": "^15.4.1",
     "react-router-dom": "^7.2.0",
     "sonner": "^2.0.1",
@@ -43,5 +53,14 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ],
+    "testEnvironment": "jsdom"
   }
 }
