--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,11 +44,12 @@
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
     "react": "^18.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^8.8.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^15.4.1",
     "react-router-dom": "^7.2.0",
     "sonner": "^2.0.1",
+    "swiper": "^11.2.5",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
