--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
-  "dependencies": {
-    "class-variance-authority": "^0.7.1",
-    "idb": "^8.0.2"
+  "name": "roomtour",
+  "version": "1.0.0",
+  "description": "Приложение для просмотра и загрузки фотографий помещений",
+  "scripts": {
+    "frontend:dev": "cd frontend && npm run dev",
+    "frontend:build": "cd frontend && npm run build",
+    "backend:dev": "cd backend && npm run dev",
+    "backend:start": "cd backend && npm start",
+    "dev": "concurrently \"npm run frontend:dev\" \"npm run backend:dev\"",
+    "start": "concurrently \"npm run frontend:build\" \"npm run backend:start\"",
+    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
