--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,16 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "file-type": "^16.5.4",
-    "crypto": "^1.0.1",
-    "helmet": "^7.1.0",
     "cors": "^2.8.5",
-    "express-rate-limit": "^7.1.5"
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "file-type": "^16.5.4",
+    "helmet": "^7.1.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
-} 
+}
