--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,11 +36,13 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.8.1",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.5.2",
     "i18next": "^24.2.2",
+    "idb": "^8.0.2",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
     "react": "^18.0.0",
