--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,13 +41,18 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.5.2",
+    "filepond": "^4.30.6",
+    "filepond-plugin-file-validate-size": "^2.2.8",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
     "i18next": "^24.2.2",
     "idb": "^8.0.2",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
-    "react": "^18.0.0",
-    "react-day-picker": "^8.8.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.2",
+    "react-filepond": "^7.1.2",
     "react-i18next": "^15.4.1",
     "react-router-dom": "^7.2.0",
     "sonner": "^2.0.1",
