--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,9 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -41,18 +44,14 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.5.2",
-    "filepond": "^4.30.6",
-    "filepond-plugin-file-validate-size": "^2.2.8",
-    "filepond-plugin-file-validate-type": "^1.2.9",
-    "filepond-plugin-image-exif-orientation": "^1.0.11",
-    "filepond-plugin-image-preview": "^4.6.12",
     "i18next": "^24.2.2",
     "idb": "^8.0.2",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
-    "react": "^18.2.0",
-    "react-avatar-editor": "^13.0.2",
-    "react-filepond": "^7.1.2",
+    "react": "^18.0.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-day-picker": "^8.8.0",
+    "react-dom": "^18.0.0",
     "react-i18next": "^15.4.1",
     "react-router-dom": "^7.2.0",
     "sonner": "^2.0.1",
